AC_INIT(gnu-crypto,1.0)
AM_INIT_AUTOMAKE([gnu dist-bzip2])

AM_PROG_LIBTOOL
AM_PROG_GCJ
AC_PROG_INSTALL
AC_PROG_LN_S

AC_SUBST(LIBTOOL_DEPS)

dnl  --------------------------------------------------------------------------
dnl  JUnit configuration.
dnl
AC_ARG_WITH(junit_jar,
  [  --with-junit-jar      Path to junit.jar.])

dnl  --------------------------------------------------------------------------
dnl  Check whether or not junit.jar was supplied.
dnl
if test "x$with_junit_jar" != x; then
   if test ! -f $with_junit_jar; then
      AC_MSG_ERROR([Could not find file: $with_junit_jar.])
   fi

   junit_cp="$with_junit_jar$PATH_SEPARATOR"
else
   junit_cp=
fi

dnl  --------------------------------------------------------------------------
dnl  JUnit conditional and variable substitution.
dnl
AM_CONDITIONAL(JUNIT, test "x$junit_cp" != x)
AC_SUBST(junit_cp)

AC_OUTPUT(Makefile source/Makefile)
